--- a/微观经济学/微观经济学.md
+++ b/微观经济学/微观经济学.md
@@ -4,7 +4,7 @@
 + 主译： 萧琛
 + 第19版
 ## 读书笔记
-### 第一章 经济学核心概念
+## 第一章 经济学核心概念
 ### A. 为何学习经济学
 #### 稀缺与效率：经济学的双重主题
 + 经济学的定义
@@ -57,11 +57,11 @@
   + 在经济周期的衰退阶段（由于宏观经济的刚性，并非技术性遗忘）也会出现非效率
   + 当市场无法真实反映事物的稀缺性时，例如环境恶化，另一种非效率就会发生
 4. 旨在理解怎样才能将经济学强有力的思想用于人类社会核心问题的分析，这就是我们学习经济学最根本的理由
-### 第一章附录
+## 第一章附录
 #### 边际值的斜率
 1. “边际”是经济学中最重要的概念之一，通常的意思是”附加的“或者”额外的“。
 2. 边际成本：当一家企业生产额外一单位产品时所额外付出的成本
-### 第二章 现代混合经济
+## 第二章 现代混合经济
 每个人都力图用好他的资本，使其产出能实现最大的价值。一般来说，他既不会企图增进公共福利，也不知道他能够增进多少。他所追求的仅仅是一己的安全或私利。但是，在他这样做的时候，有一只看不见的手在引导着他去帮助实现另一个目标，尽管该目标并非是他的本意。追逐个人利益的结果，使他经常地增进社会的利益，其效果要比他真的想要增进社会的利益时更好。--亚当斯密《国富论》（1776年）
 1. 在一个良好运转的市场机制中，追求私人利益可以增进社会福利
 2. 世界各国都是一种混合经济，即市场上的私人企业，以及监管、税收和规划等各政府部门的结合体
