--- a/微观经济学/微观经济学.md
+++ b/微观经济学/微观经济学.md
@@ -69,4 +69,70 @@
 1. 大部分经济活动都是私人企业经由市场机制而进行和完成的
 2. 这些活动通过价格和市场机制而得到了协调
 #### 不是混乱而是经济秩序
-1. 
+1. 市场应被理解成一种买者和卖者决定价格并交换物品、劳务或资产的机制
+2. 市场的核心作用是决定商品的价格
+3. 价格是物品的货币价值
+4. 价格在市场机制中起着平衡的作用
+5. 市场均衡代表了所有不同的买者和卖者之间的一种平衡
+6. 在某一价格水平上，买者所愿意购买的数量正好等于卖者愿意出售的数量，这一价格就达成了供给和需求的均衡
+#### 市场如何解决三大经济问题
+1. 市场经济同时解决了生产什么、如何生产和为谁生产这三个问题
+2. 生产什么商品和劳务取决于消费者在每天购买决策中的货币选票
+3. 如何生产取决于不同生产者之间的竞争
+4. 为谁生产主要取决于生产要素市场的供给与需求
+#### 二元君主
+1. 经济的核心控制者是偏好和技术
+2. 利润在奖励或惩罚企业并引导市场机制
+#### 看不见的手
+1. 在一个良好运转的市场机制中，追求私人利益可以增进公共福利
+2. 在一定的条件下，完全竞争是有效率的
+3. 市场不灵的一种情况是垄断以及其他形式的不完全竞争
+4. 第二种不灵表现为市场的外溢效果或外部性：正面的外部性包括科学发现，而负面的外溢效果应包括环境污染
+5. 对市场的最后一种指责是：其收入分配的后果在政治上或道义上是无法接受的
+6. 在完全竞争和不存在市场不灵的情况下，市场会用其资源尽可能多地生产出有用的物品与劳务。但在存在垄断、污染或其他市场不灵的情况下，看不见的手的效率特征就可能会遭到破坏
+7. 消费是所有生产的唯一的终点和目的
+### B. 贸易、货币和资本
+现代经济最显著的特征：贸易网络、货币、资本运用
+#### 贸易、专业化和劳动分工
+1. 专业化是指让个人或国家各自集中精力去完成某一种（或一系列）任务
+2. 贸易生财的思想是经济学的核心见解之一
+3. 专业化和贸易是提高生活水平的关键
+#### 货币：交换的润滑剂
+1. 货币还是一种能够便利交换的润滑剂
+2. 货币供应适度是各国宏观经济政策的主要任务之一
+#### 资本
+1. 资本与土地和劳务不同，它在使用之前必须首先被生产出来
+2. 资本的利用涉及到时间消费和迂回（例如：首先造鱼竿再钓鱼，而不是直接钓鱼）的生产手段
+3. 个人占有资本并能从中获取利润，是资本主义的实质之所在
+4. 产权指的是个人或企业所拥有的购买、出售和使用资本品和市场经济中其他财产的权利
+### C. 政府--看得见的手
+1. 政府的活动领域：公益事业、监管、补贴、征税...
+2. 政府对于市场经济所行使的职能：
+  + 政府通过促进竞争、控制诸如污染这类外部性问题，以及提倡公共品等活动来提高经济效率
+  + 政府通过财政税收和预算支出等手段，有倾斜地向某些团体进行收入再分配，从而促进公平
+  + 政府通过财政政策和货币政策附近宏观经济的稳定和增长，在鼓励经济增长的同时，减少失业和降低通货膨胀
+#### 效率
+1. 完全竞争指的是，没有一家企业或一位消费者足以影响整个市场的价格
+2. 很多情况下，市场的竞争却不完全
+3. 一个行动可能在市场交易之外有助于或有损于其他人的利益，存在着根本不发生经济支付的经济交易（外部性）
+4. 外部性（或溢出效应）指的是企业或个人向市场之外的其他人所强加的成本或效益
+#### 公共品
+1. 公共品的两个特性：非相克性、非互斥性
+2. 公共品是指这样一类商品，将该商品的效用拓展于他人的成本为零；无法排除其他人参与共享
+3. 税收听起来好像是另一种“价格”。在此，它是我们为公共品所支付的价格
+4. 税收并不是自愿支付的
+#### 公平
+1. 物品追随的是货币选票而不是最大满足
+#### 宏观经济的增长与稳定
+1. 财政政策就是税收权利和预算支出权利
+2. 货币政策涉及到货币供应和利率水平
+## 第三章 供给和需求的基本原理
+本章的任务就在于描述在一个市场经济体系中生产流程如何展开的
+### A. 需求表
+#### 需求曲线
+1. 需求向下倾斜规律几乎适用于一切商品，包括玉米片、汽油、大学教育和非法毒品等
+2. 需求向下倾斜规律：当一种商品的价格上升时（同时保持其他条件不变），购买者便会趋向于购买更少的数量。同理，当价格下降且其他条件不变时，需求量会增加
+3. 需求量趋于下降的原因：替代效应、收入效应
+4. 需求曲线取决于市场需求
+#### 市场需求
+1. 市场需求曲线是将在每一价格水平下所有个人的需求量加总而得到的
