--- a/微观经济学/微观经济学.md
+++ b/微观经济学/微观经济学.md
@@ -136,3 +136,84 @@
 4. 需求曲线取决于市场需求
 #### 市场需求
 1. 市场需求曲线是将在每一价格水平下所有个人的需求量加总而得到的
+#### 需求曲线背后的因素
+| 影响需求曲线的因素 | 以汽车为例 |
+| --- | --- |
+| 1. 平均收入 | 收入增加，人们购买更多的汽车 |
+| 2. 人口 | 人口增加导致汽车购买量增加 |
+| 3. 相关商品的价格 | 汽油价格下降导致汽车需求增加 |
+| 4. 偏好 | 拥有车成为身份的象征 |
+| 5. 特殊影响 | 包括交通工具替代，汽车安全性，未来价格预期等 |
+#### 需求的移动
+1. 当商品价格之外的因素变化引起购买数量发生变化时，我们称这种变化为需求变动
+### B. 供给表
+一种商品的供给表或供给曲线体现的是：在其他条件不变的情况下，该商品的市场价格与生产者愿意生产和出售的数量之间的关系
+#### 供给曲线
+1. 供给曲线向上倾斜的重要原因之一是“边际收益递减规律”
+#### 供给曲线背后的因素
+1. 生产成本主要取决于投入品价格和技术进步
+2. 
+| 影响供给曲线的因素 | 以汽车为例 |
+| --- | --- |
+| 1. 技术 | 计算机化生产降低了生产成本，增加了供给 |
+| 2. 投入品价格 | 工资下降，导致生产成本下降，从而供给增加 |
+| 3. 相关商品的价格 | 如果卡车的价格下降，则轿车供给会增加 |
+| 4. 政府政策 | 取消进口汽车配额和降低关税，会增加汽车总供给 |
+| 5. 特殊因素 | 互联网购物和经济使消费者能以更低量的成本比较经销商的销售价，迫使高成本卖家出局 |
+3. 只有在影响供给的其他因素发生变化时，供给才会发生变动，供给曲线也会因此移动
+### C. 供给和需求的均衡
+1. 供给和需求的力量会相互作用，产生均衡的价格和均衡的数量，即市场均衡。市场均衡发生在供给和需求达到平衡的价格和数量的点上
+2. 在需求量和供给量相等的价格水平上，就会实现市场均衡。在均衡点上，价格既没有上升的趋势，也没有下降的趋势。我们也称均衡价格为市场出清价格。这意味着所有供给和需求的订单都已完成，账面上已经出清，需求者和供给者都得到了满足
+#### 解释价格和数量的变动
+1. 在经济学中，均衡意味着市场运作中不同力量处于平衡，从而价格和数量使购买者和供应商的愿望达成一致
+2. 只有在这一水平上，买者和买者才会同时达到满足。也只有在这一价格水平上，价格和数量才不会继续有变动的趋势
+3. 供给的增长是随着需求的增长而来的
+4. 劳动者倾向于迁往那些经济发展强劲从而对劳动的需求增加的地方
+5. 我们必须注意：区分需求或供给的变动（它表示曲线的移动）与需求量或供给量的变动（它表示沿着曲线的变动）
+## 第四章 供给和需求：弹性及其应用
+### A. 需求弹性和供给弹性
+我们需要知道供给和需求在多大程度上对价格的变动做出反应
+#### 需求的价格弹性
+1. 需求的价格弹性，有时也称为价格弹性，衡量的是：当一种物品的价格发生变动时，该物需求量相应变动的大小。价格弹性的准确定义是需求量的变动的百分比除以价格变动的百分比
+2. 影响价格弹性的因素：物品本身的价格弹性，即对价格变化的敏感程度差别；人们对价格变动做出反应时间的长短（汽油就是一个典型的例子。假设当汽油价格突然上涨，而你正在驾驶着汽车横穿美国大陆，比是否会卖掉汽车放弃旅行？一般情况下你大概不会。因此，在短期内，这种场合的汽油需求可能就非常缺乏弹性。而从长期来看，你可以根据汽油的较高价格来调整自己的消费（行为），可以购买小型节能车、骑自行车、乘火车、搬到距离工作场所较近的地方居住或者与其他人公用汽车，消费模式调整余地较大）
+3. 消费模式调整余地较大，通常意味着所消费的物品的长期需求（的价格）弹性要大于短期需求（的价格）弹性
+#### 弹性的计算
+1. 需求的弹性 = 需求量的变动的百分比 / 价格变动的百分比
+2. 富有需求价格弹性
+3. 缺乏需求价格弹性
+4. 单位需求价格弹性
+5. 计算弹性的准确公式应该是
+```math
+E_D = \frac{\varDelta Q}{(Q_1 + Q_2) / 2} \div \frac{\varDelta P}{(P_1 + P_2) / 2}
+```
+#### 计算弹性的一条捷径
+1. 为了计算非线性需求曲线的价格弹性，首先过该点做切线。然后计算位于该点之下的切线线段长度与位于该点之上的切线线段长度的比值，该比值就是需求曲线上该点的价格弹性
+#### 计算弹性的代数方法
+1. 代数方法需要涉及：曲线的斜率、特定价格和需求量。其中b为曲线斜率，P0和Q0为某点的价格和需求量
+```math
+E_D = b(P_0 / Q_0)
+```
+2. 需求曲线的起点处价格弹性高
+3. 斜率并不等于弹性
+4. 弹性等于位于直线或曲线在该点切线上的雪球点之下的线段长度与位于该点之上的线段长度二者的比值
+#### 弹性和收益
+1. 根据定义，总收益等于价格乘以数量（即P * Q）
+2. 价格变动对总收益产生的影响
+  + 当需求缺乏弹性时，降低价格会减少总收益
+  + 当需求富有弹性时，降低价格会增加总收益
+  + 当需求具有单位弹性时，价格下跌不会引起总收益的任何变动
+3. 价格歧视是指同一种服务对于不同的顾客收取不同的费用的策略行为
+#### 供给的价格弹性
+1. 供给的价格弹性是供给量变动的百分比除以价格变动的百分比
+2. 影响供给弹性的主要因素是行业中增加生产的困难程度
+3. 影响供给弹性的另一个重要因素是考察时段的长短
+### B. 弹性在主要经济政策问题中的应用
+#### 农业经济学
+1. 限制产量是政府在单个市场进行干预的一个典型例子
+#### 税收对价格和数量的影响
+1. 归宿是指对生产者或消费者的真实收入征税的最终经济影响
+2. 运用供求原理，我们可以分析谁实际上承担了税负，即税收的归宿在哪里
+3. 税负归宿的一般原理：税收归宿指出了税收对生产者和消费者收入的影响。一般来说，税收归宿取决于供给和需求的相对弹性。（1）如果需求相对于供给缺乏弹性，则税收主要是向前转嫁给消费者；（2）如果供给相对于需求缺乏弹性，则税收主要向后转嫁给生产者
+#### 总结提要
+1. 切勿将弹性与斜率相混淆
+2. 干预可能会提高某些群体的利益，但通常会产生市场扭曲和导致无效率
