--- a/微观经济学/微观经济学.md
+++ b/微观经济学/微观经济学.md
@@ -217,3 +217,63 @@ E_D = b(P_0 / Q_0)
 #### 总结提要
 1. 切勿将弹性与斜率相混淆
 2. 干预可能会提高某些群体的利益，但通常会产生市场扭曲和导致无效率
+## 第五章 需求和消费者行为
+#### 选择和效用理论
+1. 效用表示满足。更准确地说，效用是指消费者如何在不同的物品和服务之间进行排序
+2. 通常，我们可以将效用理解成一个人从消费一种物品或服务中得到的主观上的享受或有用性。但是你切不可将效用等同于可观测的或可衡量的心里功效或效果。相反，效用是一种科学构思，经济学家用它来解释理性的消费者如何做出决策
+#### 边际效用和边际效用递减规律
+1. “边际”是经济学的关键术语，通常是指“新增”或“额外”的意思。边际效用是指多消费1单位商品时所带来的新增的或额外的效用
+2. 需求理论背后的一个基本理念就是边际效用递减规律。这个规律指出，随着个人消费越来越多的某种物品，他从中得到的新增的或边际的效用量是下降的
+#### 效用的数字表说明
+1. 在某一消费水平上，边际效用曲线之下的总面积的单位数都必然等于消费单位数相同时总效用曲线的高度的单位数
+2. 总效用是从开始处累计起来的所有边际效用之和
+3. 现代效用理论渊源于利功主义
+#### 需求曲线的推导
+#### 等边际法则
+1. 等边际法则：我应该这样安排自己的消费，即在每一种物品上所支出的最后1美元，都能给我带来相同的边际效用
+2. 等边际法则：最大满足或效用最大化的基本条件是要符合等边际法则，即当花费在任何一种物品上的最后1美元所得到的边际效用正好等于花费在其他任何一种物品上的最后1美元所得到的边际效用的时候，该消费者就会得到最大的满足或效用
+3. 消费达到均衡时用于各种物品的每1美元的一般的边际效用被称为收入的边际效用。它衡量的是消费者追加1美元消费时可以得到的额外的效用
+4. 公式表达
+```math
+\frac{MU_{product1}}{P_1} = \frac{MU_{product1}}{P_1} = \frac{MU_{product1}}{P_1} = ... = MU_{Every\quad dollar\quad of\quad income}
+```
+#### 效用理论的分析发展
+1. 基数效用（或可计量的）-->定量
+2. 序数效用：只考察消费者对商品组合的偏好排序-->定性
+3. 在等边际法则中讨论效用时，我们所假设的是物品可以分割成若干的很小的单位。然而在许多场合，单位物品的不可分割性也很重要，不能被忽略。
+4. 当不可分割性起作用时，等边际的均衡数量法则就会让位于非均衡数量法则
+#### 替代效应
+1. 替代效应：当某一物品的价格上升时，消费者倾向于用其他商品来代替变得较为昂贵的该种物品，从而更便宜地获得满足
+#### 收入效应
+1. 实际收入是指你的货币收入能够买到的物品的实际数量。当价格上升且后壁收入固定不变时，消费者的实际收入便会下降
+2. 收入效应，即物品价格变化通过对消费者实际收入的影响，进而影响消费者对该物品的需求数量
+3. 收入弹性，这一术语表示在其他条件（如价格）保持不变的情况下，需求量变动的百分比除以收入变动的百分比
+4. 收入弹性 = 需求量变动的百分比 / 收入变动的百分比
+5. 高收入弹性：如空中旅行；低收入弹性：如土豆
+#### 从个人需求到市场需求
+1. 通过把所有消费者的需求量加总，我们可以得到某一物品的整个市场的需求曲线
+2. 我们用小写字母（dd和ss）表示个人的需求曲线和供给曲线，用大写字母（DD和SS）表示市场的需求曲线和供给曲线
+#### 需求曲线的移动
+1. 需求曲线表明一种物品的需求量如何对它的价格变动做出反应。但是，需求也受到其他物品的价格、消费者的收入和特殊因素的影响。需求曲线实在假设这些条件保持不变的前提条件下描绘出来的。但是，如果这些条件发生了变化，则情况又将会如何呢？此时，整个需求曲线会向右方或左方移动
+#### 替代品和互补品
+1. 如果物品A的价格上升增加了替代品B的需求，那么，物品A和物品B就互为替代品
+2. 物品A的价格上升会降低其互补品B的需求，那么，物品A和物品B就互为互补品
+3. 介于替代品和互补品之间的是独立品
+#### 价格悖论
+1. 商品的数量越多，它的最后一单位的相对购买愿望就越小。因此，为什么大量的水只有极低的价格，为什么必不可少的物品，如空气，却成为免费物品，其答案就清楚了。在这两种情况下，正式巨额的数量使其边际效用大大减少，因而降低了这些重要物品的价格
+#### 消费者剩余
+1. 一种物品的总效用与其市场价值之间的差额成为消费者剩余。之所以会产生剩余，是因为我们“所得到的大于我们所支付的”，这种额外的好处源于边际效用递减规律
+## 第五章附录
+#### 无差异曲线
+1. 无差异曲线：这条无差异曲线上的点，代表消费者所有的无差异的消费组合：每一种组合你都有同等的意愿去得到
+#### 替代规律
+1. 一种物品越是稀缺，它的相对替代价值就越大，相对于变得充裕的物品，它的边际效用就会上升
+2. 无差异曲线的斜率是两种物品的相对边际效用的度量
+3. 替代规律指出，当你得到更多的某种物品时，该物品的替代率或无差异曲线的斜率的斜率递减
+#### 切点的均衡位置
+1. 从几何上看，当预算线的斜率正好等于无差异曲线的斜率时，消费者达到均衡状态
+#### 收入和价格的变化
+1. 无差异曲线的两个重要应用在于考虑一下两种效应：（a）货币收入变化；（b）两种物品中的一种的价格发生变化
+## 第六章 生产和企业组织
+我们的目的是了解市场力量是如何决定商品和服务的供给的
+### A. 生产理论和边际产量
