--- a/微观经济学/微观经济学.md
+++ b/微观经济学/微观经济学.md
@@ -277,3 +277,129 @@ E_D = b(P_0 / Q_0)
 ## 第六章 生产和企业组织
 我们的目的是了解市场力量是如何决定商品和服务的供给的
 ### A. 生产理论和边际产量
+#### 生产函数
+1. 生产函数是指：在既定的工程技术和知识水平下，给定投入之后能够得到的最大产出（投入-产量 函数）
+2. 注意，我们的定义所假定的是：企业总是尽力做到有效率的生产。换句话说，在给定投入量的前提下，它们总是企图生产出最大的产量
+#### 总产量、平均产量和边际产量
+1. 总产量表示生产出来的、用实物单位衡量的产出总量
+2. 边际产量实<u>在其他投入保持不变</u>的情况下，由于新增1单位的投入而多生产出来的产量或产出
+3. 这种边际产量统计对于理解如何决定工资等其他要素价格非常重要
+4. 平均产量，它等于总产量除以总投入的单位数
+#### 边际收益递减规律
+1. 边际收益递减规律表明在其他投入不变时，随着某一投入量的增加，新增加的产出越来越少。换言之，在其他投入不变时，随着某一投入量的增加，其每1单位投入的边际产量会下降
+2. 边际收益递减规律表明了一个很基本的关系。当一种投入如劳动，被更多地追加既定数量的土地、机器和其他投入要素上时，每单位劳动所能发挥作用的对象越来越有限。土地会越来越拥挤、机器会被过度地使用，从而劳动的边际产量会下降
+3. 边际收益递减规律是解释为什么亚洲许多国家如此贫穷的关键性因素之一
+4. 另外，边际收益递减规律可能并不适用于所有的产量水平。某个最初的劳动投入实际上可能表现出边际产量的递增。这是因为，需要一个最小的劳动量才能走到田间并拿起锄头。尽管有这些例外，但边际收益递减仍是一条在大多场合和都能适用的规律
+#### 规模报酬
+1. 规模报酬不变、规模报酬递增经济、规模报酬递减
+#### 短期和长期
+1. 短期为这样一个时期，在该时期里，企业能够通过改变可变要素，如原料和劳动，但不能改变固定要素（如资本）来调整生产
+2. 长期定义为一个足够长的时期，以至于包括资本在内的所有要素都可以得到调整
+#### 技术变革
+1. 我们要区分产品创新和工艺创新，前者指新的或改良的产品被推向市场；后者则指对已有产品采用新的或改良的生产加工技术
+2. 工艺创新等同于生产函数的改变
+3. 但是，在出现市场不灵的时候，技术腿部也可能会在市场经济中发生
+4. 外部收益：消费者不仅能从自己的使用中获益，而且能够从其他人的使用中收益
+5. 网络：很多产品本身没有多大用处，只有在和其他产品良和使用时才具有价值。网络的种类很多，取决于它的物理连接，如电信系统、输电网络、计算及集群、管道网和道路网，以及人们使用相互兼容的软件（如Windows操作系统）或同一语言（如英语）时所形成的间接网络
+6. 网络市场特性：
+  + ”冒尖鼓励型“：赢者通吃
+  + 历史因袭：习惯一旦形成很难改变
+  + 规模经济
+7. 网络市场为了确定早期的领导：
+  + 采用渗透定价策略，即向早期用户提供低价
+  + 将你的产品和其他已经流行的产品捆绑在一起
+  + 质疑你的竞争对手产品的质量或稳定性
+  + 斥巨资做广告
+#### 生产率
+1. 生产率是总产出对加权平均的投入的比率
+2. 生产率涉及两个重要的变量是劳动生产率和全要素生产率，前者计算每单位劳动的产量，后者计算每单位总投入（一般包括资本和劳动）的产量
+#### 由规模经济和范围经济引起的生产率的增长
+1. 生产率增长的原因有：技术进步、规模经济和范围经济
+2. 范围经济发生于大量不同产品同时生产比单独生产更有效率的时候
+### B. 企业组织
+#### 企业的性质
+1. 企业由专业化的组织所组成以便管理生产过程
+2. 企业的重要功能是：实现批量生产的优势、筹集资金、管理和协调生产过程
+3. 企业由专业化机构组成以管理生产过程。生产在企业里进行的原因在于效率通常要求大规模的生产、筹集巨额资金以及对正在进行的活动进行细致的管理与协调
+#### 公司
+1. 现代公司的核心特征如下
+  + 公司的所有权属于那些掌握了公司普通股的所有人
+  + 从原则上讲，股东控制他们所拥有的公司。实际上，大公司的股东并不能真正地控制公司，因为他们太分散，根本不能左右拥有实权的公司经理们
+  + 公司的经理和董事会拥有指定公司决策的合法权利。他们决定生产什么和如何生产。总之，股东拥有公司，但经理却经营它
+2. 公司的股东承担的是有限责任，即他们所承担的公司债务或亏损，不会超过他们最初的出资
+3. 公司的收入要交纳两次所得税：首先要作为公司的利润交税，然后则对以红利形式体现的个人收入征收所得税
+#### 总结提要
+1. 规模报酬反映所有投入的平衡增加对产量的影响
+## 第七章 成本分析
+### A. 成本的经济分析
+#### 固定成本
+1. 即使企业的生产量为零也必须支付的费用较固定成本（FC）。有时，固定成本也称为“固定开销”或“沉没成本”
+#### 可变成本
+1. 可变成本（VC）是随着产出水平的变化而变化的那些成本
+2. 我们对这些成本概念做如下总结
+  + 总成本（TC）
+  + 固定成本（FC）
+  + 可变成本（VC）
+  ```math
+TC = FC + VC
+```
+#### 边际成本的定义
+1. 边际成本（MC）表示由多生产1单位产出而增加的成本
+2. IT一般具有这样一种特性，即生产第一个产品非常昂贵，而生产接下来的拷贝却非常便宜。在这个例子中，微软花费了很大的成本来研发IE浏览器，而多销售一个软件的边际成本却几乎等于零。也就是说，微软生产和销售10000001个浏览器的总成本并不比1000000个更多。而只要IE浏览器的边际成本为零，微软就不会因为对外赠送而赔钱
+#### 平均成本或单位成本
+1. 公式表达：
+```math
+AC = \frac{TC}{q}
+```
+#### 平均固定成本和平均可变成本
+1. 平均固定成本（AFC）被定义为FC/q
+#### 平均成本与边际成本的关系
++ 当MC在AC之下，它将平均成本拉下
++ 当MC在AC纸上，它将AC拉上
++ 当MC等于AC，AC固定不变。在U型AC曲线底部，MC=AC=AC的最小值
+1. AC曲线总在最低点被上升中的MC曲线所穿过
+#### 收益递减和U形成本曲线
+1. 经济学家通常画出U形成本曲线。对于一个U形的成本曲线，成本在最初的阶段是下降的，达到一个最低点，然后再开始上升
+2. 通常，在短期，我们会人为资本是固定成本，而人为劳动是可变成本。但事实并不一定如此（例如长期聘用的教授）。当然一般来说，劳动投入还是比资本投入更容易改变
+3. 可变要素的边际收益递减意味着短期边际成本的递增。这就说明了为什么边际收益递减导致边际成本在某一点之后上升
+4. 我们可以将生产率规律与成本曲线之间的关系总结如下：在短期，当像资本那样的要素固定不变时，可变要素一般表现为开始阶段的边际产量递增和随后出现的边际产量递减。与之相对应的是，成本曲线表现为开始阶段的边际成本递减和在边际收益递减发生之后出现的边际成本递增
+#### 最小成本法则
+1. 最小成本法则：为了以最小成本生产出一定数量的产出，企业应该购买各种投入，知道花费在每一投入上的每1美元的边际产量都相等时为止。这就有：
+```math
+\frac{MP_L}{p_L}\quad =\quad \frac{MP_A}{p_A}\quad =\quad ...
+```
+2. 企业的这一法则完全类似于追求效用最大化的消费者所遵循的原则
+3. 替代法则：如果一种要素的价格下降，而所有其他要素的价格保持不变，则企业用现在更便宜的要素替代所有其他要素，直到所有投入的单位美元的边际产量都相等，这便是有利可图的
+### B. 经济成本和企业会计
+1. 净收益（或利润） = 总收入 - 总支出
+### 资产负债表
+1. 资产负债表是企业在某一日期的财务状况表。这个表记录的是企业、个人或国家在某一时点上的价值
+2. 资产负债表与损益表的一个重要不同在于存量和流量
+3. 存量代表变量的水平
+4. 流量代表某一单位时间的变化
+5. 损益表统计的是一个企业的流入和流出，而资产负债表度量的是在会计年度末的资产和负债的存量
+6. 净值 = 资产 - 负债
+#### 财务欺诈
+1. 健全的会计审计制度，还有政府机构和非政府机构的晶体和审慎，是何等的重要！
+### C. 机会成本
+1. 做出决定实际上都使我们失去了做其他事的机会。失去的选择被称为机会成本
+2. 作出一项决定的机会成本涉及它所有可能的后果，无论它们是否体现为货币的交易
+3. 决策具有机会成本，因为在一个稀缺的世界中选择一样东西意味着需要放弃其他一些东西。机会成本指的是错过的最有价值的物品或劳务的价值
+4. 会计数字和实际的经济机会成本有时相去甚远
+#### 机会成本和市场
+1. 在运转良好的市场上，当所有成本都包括进来时，价格等于机会成本
+2. 在分析发生于市场之外的交易时，机会成本的概念显得尤其重要
+3. 除了外在的货币支出之外，经济成本还包括那些由于各种资源可以利用在其他方面而导致的机会成本
+#### 总结提要
+1. 平均总成本（AC） 是持续下降的平均固定成本（AFC）与平均可变成本（AVC）之和
+2. 机会成本最重要的应用在于非市场产品
+## 第七章附录
+#### 数值化的生产函数
+1. 应该记住生产函数表示在一定时点上给定管理技能和技术知识的条件下所能得到的最大产量
+#### 边际产量递减规律
+1. 边际收益递减规律表明，当我们增加一种投入而保持其他投入不变时，所增加投入的边际产量至少在一点之后将会逐步下降
+2. 边际收益递减规律是由于固定要素相对于可变要素的减少而造成的
+## 第八章 完全竞争市场分析
+1. 完全竞争市场（中）的行为是一个理想化的市场，所有单个的企业和消费者的影响都太小，以至于无法影响到市场价格。
+2. 完全竞争市场是有效率的
+### A. 竞争企业的供给行为
