--- a/微观经济学/微观经济学.md
+++ b/微观经济学/微观经济学.md
@@ -403,3 +403,72 @@ AC = \frac{TC}{q}
 1. 完全竞争市场（中）的行为是一个理想化的市场，所有单个的企业和消费者的影响都太小，以至于无法影响到市场价格。
 2. 完全竞争市场是有效率的
 ### A. 竞争企业的供给行为
+1. 在分析完全竞争企业的供给行为时，有两点需要注意：首先是利润最大化；其次完全竞争的世界是由原子式的企业所构成的，且它们都是价格接受者
+#### 完全竞争
+1. 完全竞争的世界是一个价格接受者的世界。完全竞争企业出售无差异的产品（与行业中其他企业出售的产品相同）
+2. 单个竞争者的需求弹性要比整个市场的需求弹性大得多
+3. 总结
+  + 在完全竞争条件下，有许多规模较小的企业，每个企业都生产相同的产品，并且，每个企业规模都太小，不可能影响市场的价格
+  + 完全竞争条件下的生产者面临的是一条完全水平的需求曲线（即dd曲线）
+  + 从所追加的每1单位的出售中，企业获得的额外收入刚好等于市场价格
+#### 边际成本等于价格时的竞争供给
+1. 最大利润的产量发生在边际成本等于价格的产量水平上
+2. 在完全竞争条件下企业的供给原则为：当企业将其产量确定在使边际成本等于价格的水平上时，就实现了利润的最大化，即：MC = P
+3. 零利润点，它表示在这一价格水平上企业得到的是零利润；在零利润点上，价格刚好等于平均成本，因此收入正好弥补成本
+4. 对于一个利润最大化的竞争企业来说，边际成本（MC）曲线向上倾斜的部分就是该企业的供给曲线
+5. 一个利润最大化的企业将其产量确定在能使边际成本等于价格的水平上。用图形来说，这就意味着企业的边际成本曲线也是它的供给曲线
+#### 总成本与停业条件
+1. 即使在企业没有生产任何产品时，它仍须履行契约
+2. 只要收入足以弥补可变成本，继续生产就会比较合算
+3. 在这个市场价格水平，企业的收入正好等于它的可变成本（或者说，损失正好等于固定成本），这个关键的低市场价格称为停业点
+4. 停业原则：企业在收入刚好抵补它的可变成本或者损失正好等于固定成本时，停业点就会出现。当价格低于平均可变成本时，企业就会停业以使其利润最大化（即损失最小化）
+5. 只要企业的收入超过它的可变成本，它的供给曲线就与其MC曲线相一致
+6. 追求利润最大化的企业即使亏损，也可能在短期内继续经营
+### B. 竞争企业的供给行为
+#### 加总所有企业的供给曲线可得到市场供给曲线
+1. 市场需求曲线DD也是把单个的需求曲线dd按水平方向加总得到的
+#### 短期均衡和长期均衡
+1. 经济学家发现，需求移动在短期内会比在长期内引起更大的价格调整和更小的数量调整（因为短期均衡，劳动要素供给曲线弹性更小
+2. 在可以自由进入和退出某个行业，而且任何数量的企业都可以按同样的、不变的成本曲线进行生产的情况下，长期供给曲线SS等于每个企业的最低平均成本或零利润的价格的一条水平线。如果该行业使用的是某种特殊要素（稀缺的），长期供给曲线将会向上倾斜（由于边际收益递减规律）
+#### 一个竞争性企业的长期行为
+1. 竞争的加剧是否会最终导致长期的亏损？当企业再也不能弥补它们的可变成本时，就会停止营业。但是，在长期内，所有的成本都是可变的。所以，在长期内企业仅仅在价格等于或高于零利润点（在该点价格等于平均成本）时，才愿意进行生产
+2. 在长期内，一个行业的价格趋向于某一关键点，在该点，同行的企业正好能够弥补它们的全部竞争成本
+3. 长期的零利润均衡：当一个行业的供给是由具有完全相同成本曲线的竞争企业所提供，而且这些企业又可以自由地进入或退出该行业时，长期均衡的条件就是：对于每一个完全相同的企业来说，价格等于边际成本，也等于最低长期平均成本点、即：P = MC = 最低长期AC = 零利润的价格。这就是长期的令经济利润条件
+4. 竞争的力量趋向于把各个企业的和各个行业推向零利润的长期状态
+5. 因此，在一个竞争性行业中，长期均衡是一种没有经济利润的均衡
+### C. 竞争市场的各种特殊情况
+#### 一般原则
+1. 几种重要的成本和供给情况：成本不变、成本递增和收益递减、固定的供给与经济租金
+2. 当供给数量不随着价格的变化而变化时，对这种生产要素的支付称为租金或纯经济租金
+#### 供给的变动
+1. 当需求缺乏弹性时，供给的增加使价格P下降的幅度最大
+2. 当需求缺乏弹性时，供给的增加使数量Q增加的幅度最小
+### D. 竞争市场的效率和公平
+本章将对完全竞争市场的效率作一个总体上的评综
+#### 效率的概念
+1. 在任何可能的生产资源重组都不能在不使其他人的情况变坏的条件下，使得任何一个人的福利变好时，就达到了帕累托效率，或简称为效率。因此，在实现了配置效率的条件下，只有降低某个人的效用才能增加另一个人的满足或效用
+#### 竞争性均衡的效率
+1. 为了简便起见，我们用闲暇时间的“尤特尔”来衡量福利水平（或用正常工作时间“非尤特尔”）。我们进一步假设每一小时被放弃的闲暇的边际成本不变，所以，所有闲暇与劳动的效用和成本都可以计算出来。
+2. 经济剩余 = 消费者剩余 + 生产者剩余
+3. 经济剩余是从生产和消费某一种物品中所得到的福利或净效用，它等于消费者剩余与生产者剩余之和
+4. 对竞争性均衡的详细分析将证明，它使产业中可能的经济剩余达到最大化
+5. 社会从消费最后1单位中得到的边际收益等于社会生产最后1单位的边际成本，从而保证了竞争性均衡的效率
+#### 众多消费者和市场的均衡
+1. 当个人的边际成本等于社会的边际成本，且二者都等于边际效用时，一个完全竞争的竞技就是有效率的
+2. 通过使价格与边际成本相等，竞争就可确保经济达到配置效率
+3. 竞争才是效率的保证，这个原则在多种要素和多种产品的情况下同样是成立的
+#### 边际成本作为效率标准
+1. 运用边际成本来获得生产效率，对于任何一个试图最有效率地利用其资源的社会或组织来说都是适用的
+2. 边际成本并非只适用于利润最大化的企业，而适用于各种经济问题，事实上，它适用于所有涉及到稀缺性的问题
+3. 在关于效率的分析中，边际成本是一个最基本的概念。对于任意追求某一目标的组织，效率要求它在每一项活动中，为实现目标所投入的边际成本都相等。市场经济中，只有当每家企业的边际成本MC都等于一个共同的市场价格时，该行业才能以最小的成本进行生产
+#### 限制
+1. 竞争市场具有显著的效率特性
+2. 市场的一些缺陷：
+  + 当存在污染、其他外部性、不完全竞争和不完全信息时，市场便无效
+  + 竞争市场下的收入分配即使是有效率的，也可能不是社会想要的或能接受的
+#### 市场不灵
+1. 不完全竞争
+2. 外部性（不是所有的外部性都有害，有些外部性是有益的）
+3. 不完全信息
+#### 总结提要
+1. 帕累托效率的实现，需要完全竞争、完全信息和不存在外部性的条件。当这三个条件得到满足时，一个重要的效率条件得以成立：价格比率 = 边际成本比率 = 边际效用比率
