--- a/微观经济学/微观经济学.md
+++ b/微观经济学/微观经济学.md
@@ -472,3 +472,86 @@ AC = \frac{TC}{q}
 3. 不完全信息
 #### 总结提要
 1. 帕累托效率的实现，需要完全竞争、完全信息和不存在外部性的条件。当这三个条件得到满足时，一个重要的效率条件得以成立：价格比率 = 边际成本比率 = 边际效用比率
+
+## 第9章 不完全竞争和垄断
+现在，欢迎你来到现实世界，一个不完全竞争的世界
+### A. 不完全竞争模式
+1. 与完全竞争相比，不完全竞争的价格较高，而产量较低
+#### 不完全竞争的定义
+1. 如果一个企业能够影响其产品的市场价格，那么，该企业就是一个不完全竞争者
+2. 当个别卖者能够影响某一行业的产品价格时，该行业就处于不完全竞争之中。不完全竞争的类型主要有垄断、寡头和垄断竞争
+3. 一个不完全竞争者对其价格的确拥有某些但又绝不是全部的拍板权
+4. 不完全竞争者是价格的制定者而非价格接受者
+#### 形形色色的不完全竞争者
+1. 不完全竞争市场结构分为以下三种类型：垄断、寡头、垄断竞争
+#### 垄断
+1. 垄断：单一的卖者完全控制某一行业（这个单一的卖者称为“垄断者”，“垄断者”这个词来源于希腊语中的“单个”和“卖者”这两个词）。垄断者是他所在行业的唯一生产者。同时，没有任何一个行业能够生产出相近的替代品
+2. 在长期内，没有一个垄断者能够确保自己免受竞争的冲击
+#### 寡头
+1. 寡头的意思是“几个卖者”。从上下文来看，几个可以是两个那么少，也可以是10个或15个那么多。寡头的重要特征是每个企业都可以影响市场价格
+#### 垄断竞争
+1. 垄断竞争：一个产业中有许多卖者生产有差异化的产品
+2. 市场上有许多卖者，但任何一个卖者都没有太大的市场份额
+3. 垄断竞争与完全竞争不同的是：由不同企业销售的产品并不相同（即差异化产品）
+4. 差异化产品在重要的特征上表现不同。例如，个人电脑在速度、内存、硬盘、调制解调器、大小和重量等各方面具有不同的特征
+6. 各种市场结构
+
+| 结构 | 生产者的数目和产品差异化程度 | 一般经济领域 | 企业对价格的控制程度 | 营销的方式 |
+| --- | --- | --- | --- | --- |
+| 完全竞争 | 许多生产：完全相同的产品 | 金融市场与农产品 | 没有 | 市场交易或拍卖 |
+| 垄断竞争 | 许多生产者：产品有许多真正或感官上的差异 | 零售业（比萨饼、啤酒...）个人电脑| 一些 | 广告宣传和产品质量方面的竞争，受到管制的价格
+| 寡头 | 几个生产者：产品的差异化很小或没有差异/产品有差异化 | 钢铁、化工.../汽车、文字处理软件... | 一些 | 广告宣传和产品质量方面的竞争，受到管制的价格 |
+| 垄断 | 单一生产者：产品没有替代品 | 特许经营（电力、自来水）；微软Windows；专利药品 | 相当大 | 广告 |
+
+7. 不完全竞争并不等于没有竞争；完全竞争并不意味着对抗，而只是表示行业中没有一家企业能影响市场价格
+#### 市场不完全竞争的根源
+1. 两条主要原因：首先，当大规模生产出现规模效益并降低成本时，一个产业中的竞争者就会越来越少；其次，当出现进入壁垒，即新的企业很难加入某一行业时，也有可能出现不完全竞争
+#### 进入壁垒
+1. 规模经济是进入壁垒的一种很普遍的类型，除此之外，法律限制、进入的高成本以及广告和产品差异化也会形成进入壁垒
++ 法律限制
+  + 关税是托拉斯之母。这是因为政府强加的进口限制能将外国竞争者拒之门外。原因可能在于：某种产品的单个国家市场可能只能支撑两三个企业，而世界市场则足够大，可以支撑很多的生产者
++ 进入的高成本
+  + 用户一旦掌握了一种软件以后，就不大愿意去学习另一种
++ 广告与产品差异化
+  + 广告可以打开产品的知名度并形成名牌效应
+2. 少数几家厂商生产许许多多、形形色色的品牌、型号和产品
+3. 产品的多样化可以吸引最大范围的消费者
+4. 大量具有差异化的产品使潜在的竞争者很难鼓起勇气加入这个市场
+5. 每一种有差异化的产品的需求是如此之小，以至于这些市场不能维持许多企业达到U形成本曲线的最低点进行生产（理解：在完全竞争市场，此时，对于单个企业，市场需求量很大，P = MC = AC（U形成本曲线最低点），每个企业都是价格接受者；而由于差异化产品需求量较小，因而，单个企业可以通过规模效益占领市场，使得P > MC）    
+6. 产品差异化和关税一样导致了更高的集中程度和更加不完全的竞争
+7. 产品的品牌的产生取决于消费者对该产品的品味和质量的认可和口碑
+### B. 垄断行为
+1. 垄断行为会导致高价格、低效率和低产出，从而会减少消费者的福利
+#### 边际收益和价格
+1. 边际收益（MR）的定义是：当销售量增加1单位时，由此而引起的收益的变化。MR既可以为正，也可以为负
+2. 负边际收益是指：为了售出更多单位的产量，该企业必须将价格降低到如此低的程度，以至于它的总收益下降
+3. 当需求富有弹性时，MR起初是正的。然而，在需求转变为缺乏弹性之后，尽管价格仍是正数，MR却变为负数
+4. 当dd曲线变为缺乏弹性时，MR变为负数
+#### 弹性和边际收益
+1. 需要牢记的要点如下：
+  + 边际收益（MR）是销售增加以单位时所引起的收益的变动
+  + 价格 = 平均收益（P = AR）
+  + 当需求曲线向下倾斜时，P > MR = P - 此前销售的所有的单位的收益的减少量
+  + 当需求有弹性时，边际收益为正；当需求为单位弹性时，边际收益为零；当需求缺乏弹性时，边际收益为负
+  + 对完全竞争者而言，P = MR = AR
+2. 需求弹性、产量、价格、收益及边际收益之间的关系
+
+| 需求 | 产量（q）和价格（P）之间的关系 | 产量（q）对总收益（TR）的影响 | 边际收益（MR）|
+| --- | --- | --- | --- | 
+| 富有弹性（Ep > 1） | q变动百分比 > P变动百分比 | q越高，TR越高 | MR > 0 |
+| 单位弹性（Ep = 1） | q变动百分比 = P变动百分比 | q增大，TR不变 | MR = 0 |
+| 缺乏弹性（Ep < 1） | q变动百分比 < P变动百分比 | q越高，TR越低 | MR < 0 |
+#### 利润最大化的条件
+1. 总利润 = 总收益 - 总成本，符号表示： TP = TR - TC = (P * q) - TC
+2. 当产量达到该企业的边际收益等于它的边际成本的水平时，利润达到最大，即 MR = MC
+#### 垄断均衡的图示
+1. 当产量确定在MC = MR的水平，垄断者就可以使其利润最大化。由于该垄断者拥有一条向下倾斜的需求曲线，这就意味着 P > MR。对于一个追求利润最大化的垄断者来说，由于价格高于边际成本，因此，垄断者会将产量水平降低到低于在完全竞争产业中所决定的水平
+#### 完全竞争作为不完全竞争的一个极端情况
+1. 完全竞争者的 P = MC，是 MR = MC 利润最大化条件的一个特例
+2. 利润最大化原则：MR = MC
+#### 边际原则：让过去成为过去
+1. 你应该注意决策的边际成本和边际收益，并忽略过去的或沉没的成本
+#### 损失规避和边际原则
+1. ”损失规避“意思是说即使继续持有某项资产要付出昂贵的代价，人们也拒绝承担现时的损失。这种行为已经在房市中得到证实，在房地产市场上，人们在售房遭遇损失时总是开出更高的要加，并且会等上更长的时间
+2. ”托拉斯“，即股东将股票转交给托管人，由他们负责经营，实现利润最大化
+## 第10章 寡头和垄断竞争
