--- a/微观经济学/微观经济学.md
+++ b/微观经济学/微观经济学.md
@@ -555,3 +555,74 @@ AC = \frac{TC}{q}
 1. ”损失规避“意思是说即使继续持有某项资产要付出昂贵的代价，人们也拒绝承担现时的损失。这种行为已经在房市中得到证实，在房地产市场上，人们在售房遭遇损失时总是开出更高的要加，并且会等上更长的时间
 2. ”托拉斯“，即股东将股票转交给托管人，由他们负责经营，实现利润最大化
 ## 第10章 寡头和垄断竞争
+### A. 不完全竞争者的行为
+#### 市场力量的衡量
+1. 市场力量指的是单一厂商或少数企业控制某一行业的价格制定和生产决策的程度
+2. 衡量市场力量最常用的一个指标是一个产业的集中率
+3. 四企业集中率的定义是：某产业四家最大的厂商的总产量（或发货量）在整个产业中所占的百分比
+4. 八企业集中率就是前八大厂商在某个产业总产量中所占的百分比
+5. 要想充分了解那些占统治地位的企业在行业中的角色，赫芬达尔-赫希曼指数（Herfindahl-Hirschman Index,HHI）是一种更好的方法。该指数是通过将一个市场中所有参与者所占的市场份额的比率的平方进行加总而获得的
+6. 慎用集中率指标的情形：
+  + 国际竞争
+  + 关系密切的行业之间的竞争：集中率指标往往忽略了来自其他相关产业的竞争（例如：有线电话和微信电话）
+#### 不完全竞争的实质
+1. 不完全竞争市场存在着三个主要的因素：经济规模、进入壁垒和策略互动
+2. 策略互动是寡头市场的一个新特征，属博弈论研究领域。当每个企业的经营战略取决于它的竞争对手的行为时，就会出现策略互动
+3. 集中行业的利润率比非集中行业并高不了多少
+#### 不完全竞争理论
+1. 我们将考虑不完全竞争的三种重要情况：勾结寡头、垄断竞争和少数寡头
+#### 有勾结的寡头
+1. 策略互动描述的就是每个企业的经营策略如何依赖于竞争对手的商业行为
+2. 勾结：两个或更多的企业共同确定它们的价格或产量，在它们之间瓜分市场，或者共同制定其他生产决策
+3. 卡特尔是生产相似产品的独立企业联合起来以提高价格华为限制产量的一种组织
+4. 公司相互勾结起来共同确定价格或瓜分市场的行为属于非法的
+5. 多家企业厌倦毁灭性的价格大战，于是暗中勾结，将价格定在同一水平，而不是相互压价。在这种情况下，企业可能需要寻求一种勾结寡头均衡，以得到使其共同利润最高的定价。这样这四家企业实际上成了一个垄断者
+6. 事实上，经验表明，成功运作卡特尔是一件很难的事，不管是公开的还是秘密的
+7. 虽然许多寡头对获取高利润感到满意，但是，在现实生活中，存在许多阻碍它们有效勾结的因素。首先，勾结是非法的。其次，企业可能通过对所选择的顾客降低价格以增加其市场份额来”欺骗“协议中的其他成员。在价格保密、产品有差别、企业的数目不只几个或技术变化迅速的市场上，秘密降价的可能性更大。第三，随着国际贸易的不断深入，许多公司不仅要应付国内竞争，还要迎接外国企业的激烈挑战
+#### 垄断竞争
+1. 垄断竞争在三个方面类似于完全竞争：有许多买者和卖者，进入和退出某一产业是自由的，各企业都有把其他企业的价格视为既定。二者之间的差别在于：在完全竞争下，产品时完全相同的；而在垄断竞争的条件下，产品时有差别的
+2. 产品存在差别意味着每个销售者相对于完全竞争市场（销售者是价格接受者）来说在某种程度上都有提高或降低价格的自由。产品差异化使得每个卖者所面临的需求曲线向下倾斜
+3. 随着拥有新差异化产品的企业的进入，这种不完全竞争行业的长期利润率为零（由于新的竞争者的进入，导致需求曲线左移导致）
+4. 在垄断竞争的长期均衡点，价格高于边际成本，但经济利润已经下降到零
+5. 所生产的大量产品满足了不同消费者的品味和需要。减少垄断竞争者的数目可能会降低消费者的福利，因为人们再也不能得到如此多样化的产品了。人们宁愿为自由选择支付较高的代价
+#### 价格歧视
+1. 价格歧视指的是同样的产品以不同的价格卖给不同的顾客（例如对新老用户价格策略不同，降低老客户福利（老客户对价格的弹性小，需要更多的转移成本），转移到新客户促销上、对非vip用户阉割产品功能）
+### B. 博弈论
+1. 博弈论所分析的是，目标相互冲突的两个或更多的决策者的行为及其互动的情况
+2. 在不完全竞争的市场结构中，博弈论者若干重要的见解如下：
+  + 随着不合作寡头数量的增加，一个产业的价格和产量将接近倾向于完全竞争市场的产出情况
+  + 如果企业成功勾结，那么，市场价格和产量将接近于垄断所产生的价格和数量
+  + 过去的经历表明，随着企业数量的增加，勾结协议更加难以付诸实施，发生欺骗和不合作行为的次数也会增加
+  + 在多种情况下，不存在寡头市场的稳定均衡。由于企业威胁、欺骗、发动价格战、处罚较弱的对手、暗示它们的意向或简单地退出市场等原因，策略互动就可能导致不稳定的后果
+3. 博弈论所分析的是两个或两个以上的比赛者或参与者选择能够共同影响每一个参加者的行动或策略的方式
+#### 定价策略
+1. 一旦你开始考虑他人会如何的对自己的决策做出反应的时候，你便进入了博弈论的领域
+#### 基本概念
+1. 体现两个企业或两个人之间相互作用的有用工具是双方的回报矩阵
+#### 策略选择
+1. 博弈论的指导思想是：假设你的对手在研究你的策略，并采取追求自身最大利益的行动，这时你应该如何选择最有效的策略
+2. 占优策略，即无论其他博弈者采用何种战略，该博弈者的策略总是最好的
+3. 在两个（或全部）博弈者都采用占优策略时，我们称其结果是一种占优均衡
+4. 纳什均衡：每个人（博弈的双方或多方）都选择对自己受益最大的策略时，所达到的均衡
+5. 由于每一企业都想”欺骗“对手并通过降价获取更多利润，因而确保了在无合谋的情况下，正常价格的纳什均衡将成为一个普遍的事实
+6. 博弈论的一条基本原则：把自己的战略建立在嘉定对手会按其最佳利益行动的基础上
+7. 纳什均衡是一个在其他博弈者的策略给定时，没有一方还能改善自己的获利情况。纳什均衡有时也被称作非合作性均衡。这是因为，每一方选择策略时都没有合谋，他们只是选择对自身最有力的策略，而不考虑社会福利或任何其他群体的利益
+### C. 公共政策如何应对市场力量
+#### 提高价格和产出不足的代价
+1. 垄断者减少产量和提高价格，因此它们的产量低于应有的像在完全竞争行业中的那种水平
+2. 通过保持产品的稀缺性，垄断公司将其价格提高到边际成本之上（P > MC）
+#### 不完全竞争的静态成本
+1. 净损失，这一术语用来衡量缺乏效率所造成的经济危害
+#### 应对不完全竞争的公共政策
+1. 国家如何降低垄断带来的破坏性影响：
+  + 经济管制
+  + 反托拉斯政策
+  + 鼓励竞争：对一些幼稚企业发展的鼓励；从国际市场向国内市场引入竞争
+#### 反托拉斯法与经济学
+1. 反垄断法通过两种不同的方式打击有碍竞争的不当行为：首先，反垄断法禁止某些类型的商业行为，比如抑制竞争的价格固定行为。其次，反垄断法限制某些类型的市场结构，比如垄断
+#### 结构：越大越坏吗
+1. 尽管通过公平手段获取的垄断地位是合法的，但采取行动遏制竞争确实非法的
+#### 反托拉斯法与效率
+1. 对反托拉斯政策热态度的发生转变的原因何在？首先，经济学家发现，集中度高的行业有时会有出色的表现。也就是说，尽管静态地看，集中度高的行业效率低；然而动态地看，这些行业却具有较高的效率，并且其动态效率要远远超过静态的低效率。考虑英特尔、微软和波音公司，它们拥有可观的市场份额，但是它们仍保有高度的创新性，并在商业上取得了巨大的成功
+2. 许多经济学家都认为，就强化市场纪律而言，来自外国竞争的威胁，要远胜过反托拉斯法这一工具的威力
+
