--- a/微观经济学/微观经济学.md
+++ b/微观经济学/微观经济学.md
@@ -625,4 +625,71 @@ AC = \frac{TC}{q}
 #### 反托拉斯法与效率
 1. 对反托拉斯政策热态度的发生转变的原因何在？首先，经济学家发现，集中度高的行业有时会有出色的表现。也就是说，尽管静态地看，集中度高的行业效率低；然而动态地看，这些行业却具有较高的效率，并且其动态效率要远远超过静态的低效率。考虑英特尔、微软和波音公司，它们拥有可观的市场份额，但是它们仍保有高度的创新性，并在商业上取得了巨大的成功
 2. 许多经济学家都认为，就强化市场纪律而言，来自外国竞争的威胁，要远胜过反托拉斯法这一工具的威力
+## 第11章 不确定性经济学
+1. 不认真研究关于不确定性下的决策和信息经济学的奇妙问题，就不可能完整地把握经济生活的现实
+### A. 风险和不确定性经济学
+#### 投机：资产或商品的跨时空调配
+1. 投机包括对有价值物品或商品的买和卖，是从市场价格的波动中谋取利益的一种哦活动。投机者希望能够低价买入，高价卖出
+2. 许多人认为，投机是一种不太好的行为，尤其是在利用财务造假或刺探内部消息进行投机的时候，但是投机者有助于熨平商品在不同地区和不同时期的价格，最终能消除各种价格差异。投机者在商品充裕、价格低廉的时候买进，而在商品紧俏、价格高昂的时期卖出。投机者就是经由这种方式去消除价格在时间和空间上的差异，从而在事实上提高了整个市场的效率
+#### 套利和价格地理格局
+1. 最简单的投机活动是通过买卖同一商品降低或消除地区差异。这种活动被称为套利，即在一个市场上买入一种商品或资产，然后马上在另一个市场上卖出，通过一买一卖的价格差获取利润
+2. 由于套利的结果，市场之间的价格差通常不会超过商品在市场之间的转移成本
+#### 通过套期保值分摊风险
+1. 投机市场的一个重要功能是让人们通过套期保值分摊风险
+2. 套期保值是通过对所拥有的一种商品做对冲交易来降低风险。让我们来看看它是如何操作的。假设一位女士拥有一座谷物仓库。她在秋季在堪萨斯买进200万蒲式耳玉米，储存6个月，在第二年春天卖出，每1蒲式耳的溢价为10美分，正好抵偿所有的成本。但谷物的价格可能波动，一旦谷物的价格严格下跌，会赔尽她所有的利润。于是这位仓库拥有者的套期保值就是：在从农民手中买进玉米的同时立即卖出，而不是等到6个月以后交货的时候。当她在9月份买进200万蒲式耳玉米时，立即进行远期交易卖出，协议的未来交易价格使得她恰好能得到每蒲式耳10美分的存储费用
+3. 套期保值通过做对冲交易来回避价格波动的风险
+#### 投机的经济影响
+1. 我们发现，完美的投机行为实现了商品从其数量颇丰（价格低）时期向数量稀缺（价格高）时期的重新配置
+2. 我们的讨论表明，理想的投机市场可以提高经济效率
+3. 尽管金融投机、套期保值和套利所涉及的资产价值（金融资产例如：股票、债券等）要远大于商品投机活动的规模，但前者的基本原理和后者是完全一样的
+4. 理想的投机对于减少消费的不利波动有重要的作用。在一个人人都厌恶风险的现实世界中，投机可能提高总体效用和分配效益
+#### 风险和不确定性
+1. 若一个人为损失一定量的收入而产生的痛苦感大于他为得到同等数量的收入而产生的满足感，则他就是一个风险规避者
+2. 在同样的平均值条件下，人们宁愿要不确定性小的结果。由于这个原因，降低消费不确定性的活动能够导致经济福利的改善
+3. 赌博与投机是完全不同的。理想的投机行为可以提高经济福利，而赌博却会带来严重的经济问题
+4. 从长远看几乎所有的当事人都要输钱，因为赌场总要从赌注中拿走一份
+### B. 保险经济学
+1. 市场机制通过风险分摊来应付各种风险。这一过程就是将对一个人来说可能是很大的风险分摊给许多人，从而使每个人所承担的风险很小。风险分摊的主要形式是一种方向相反的赌博形式--保险
+2. 保险公司通过集中各种不同的风险来分摊风险，也就是说，它为数以百万计的住宅、生命或汽车提供保险
+3. 保险公司的优势在于，对个人来说是难以预料的事件，对整个人群来说则是具有很强的可预见性
+4. 保险将最大的风险切分成小块，并零星地出售它们以换取小额的风险酬金。虽然保险可谓另一种形式的赌博，实际上却能正好发挥出一种（与赌博）相反的作用。尽管自然界会造成风险，但保险却能够帮助我们减轻和分散这些风险
+#### 资本市场与风险分摊
+1. 有形资本的资金所有权可以通过企业财务所有权这个媒介，将风险在很多所有者之间进行分摊
+2. 通过将风险性资产的所有权分散到众多的所有者身上，资本市场便可进行分散风险，并且能够鼓励人们进行规模大得多的投资，而这样的投资及其风险，对于单个所有者来说也是可以接受的
+#### 信息经济中的市场不灵
+1. 市场不灵的两个重要因素是：逆向选择和道德风险
+#### 道德风险和逆向选择
+1. 如果能满足理想条件:存在多种投保情况，所有投保的风险或多或少地具有独立性，随机事件的概率也可以准确地做出估计，且个人利益未能腐蚀掉人们的基本道德，那么，私人保险市场就能够有效地运转
+2. 有时候，逆向选择会导致私人保险机制的缺失。当风险最大者成为最有可能购买保险的人群的时候，就会发生逆向选择问题
+3. 当买卖双方在重要的事实上所了解的信息不同：例如个人的健康状况或者一个正在出售商品的质量，就会发生信息不对称问题
+4. 当买卖双方存在信息不对称时，类似的市场不灵尤为严重
+#### 社会保险
+1. 当市场不灵严重以致私人保险不能提供足够的保险项目时，很可能需要政府提供社会保险。它包括覆盖大部分或全部地区的各种强制性项目，由税收和社会保险收费来筹资
+2. 扩大保险的覆盖面以避免逆向选择
+3. 让我们花些时间来看看失业保险的例子。这是一个私人保险市场无效的例子，因为私人保险所必需的诸多前提条件均不能满足：道德风险（如果保险金很高的话，人们会选择主动失业）、逆向选择（经常失业的人最愿意参加）、失业风险不存在独立性（它们将会伴随经济衰退出现），经济周期又无法预测，所以当失业风险不能被精确地度量。同时，一些政权当局都认为，当人们失业时，势必需要一张社会安全网。因此，政府通常都介入和提供失业保险
+4. 当私人保险市场不能有效发挥作用，而且社会相信个人应该有社会安全网，以应对严重的风险（如失业、疾病和低收入）时，政府就会出面提供社会保险
+### C. 医疗保障：不会消失的问题
+#### 作为社会保险项目的医疗保险
+1. 为什么医疗保险是一项社会保险？健康经济专辑给出了这样三个原因：
+  + 许多医疗保障系统，例如预防传染病和基础科学的发展，都是市场无法提供的公共品
+  + 市场不灵的第二种情况是私人保险市场不灵。这种不灵的最大原因之一是病人、医生和保险公司之间存在信息不对称
+  + 政府政策的第三个考虑因素是公平，即应当为所有人都提供最低标准的医疗服务
+#### 分配医疗
+1. 而在许多医疗领域，我们却不能允许价格机制将医疗服务分配给出价最高的人
+2. 医疗服务补助会导致短缺，对这种需求必须通过其他方式限制（例如排队）。这一现象被称为”非价格配给“
+### D. 创新与信息
+1. 信息与一般商品（如比萨饼和鞋）的差异很大，因为它生产起来花费巨大，但复制起来却成本很小。正是由于信息的这种不同寻常的特性，导致很易受市场不灵的影响，因此，我们需要制定不同的政策来管理信息，如关于”知识产权“的各种法规
+#### 信息经济学
+1. 公司不能占有其发明者的全部货币价值的情况称为不可划拨性。发明不能被完全划拨是因为，其他公司可能会模仿或非法翻印一项创造品
+2. 发明的社会效益（也就是发明对于所有消费者和生产者的价值）
+#### 知识产权
+1. 知识产权的目的是保护所有者的资源，以免他人在不对所有者或最初发明者进行补偿的情况下进行复制和使用
+2. 知识产权最早的形式之一就是专利，即由政府授权在有限的时间内，排他地（有效地，有限垄断地）使用一项”新颖、并非很起眼但很有用“的发明成果
+#### 互联网的两难境地
+1. 必须注意的一点是，完全竞争在这里是无法存在的，因为若价格等于边际成本，即价格为零，则企业的收入为零，从而无法生存
+2. 当今世界日益致力于开发新知识（其中很多是无形的，例如音乐、电影、新的药物和软件），政府必须为知识产权的流通找到一个中介平台。若知识产权保护过强，则会导致提高价格和垄断损失；而若保护过度，则又会阻碍发明和创新
+### 第12章 市场如何决定收入
+
+
+
 
