--- a/微观经济学/微观经济学.md
+++ b/微观经济学/微观经济学.md
@@ -688,7 +688,140 @@ AC = \frac{TC}{q}
 #### 互联网的两难境地
 1. 必须注意的一点是，完全竞争在这里是无法存在的，因为若价格等于边际成本，即价格为零，则企业的收入为零，从而无法生存
 2. 当今世界日益致力于开发新知识（其中很多是无形的，例如音乐、电影、新的药物和软件），政府必须为知识产权的流通找到一个中介平台。若知识产权保护过强，则会导致提高价格和垄断损失；而若保护过度，则又会阻碍发明和创新
-### 第12章 市场如何决定收入
+## 第12章 市场如何决定收入
+### A. 收入与财富
+#### 收入
+1. 收入指的是一定时期内（通常为一年）的工资、利息、股息和其他有价物品的流入
+2. 所有收入的总和就是国民收入
+#### 政府的作用
+1. 各级政府以转移支付的形式提供收入
+2. 转移支付是政府向个人提供的一种不需要用商品或服务加以回报的支付。转移支付中最大的一项就是对老年人的社会保险，此外还包括失业保险、农业补贴和福利开支
+3. 个人收入等于市场收入加上转移支付。市场收入大部分来自工资和薪金：少数富人的市场收入来自于财产收益。政府的转移支付主要用于支付老年人的社会保障
+#### 财富
+1. 财富是人们在某一时间点所拥有的资产的货币净值。注意，财富是一个存量（如同湖中的水量），而收入是单位时间内的流量（如同河中的水流）。
+2. 家庭的财富包括有形财产（房屋、汽车、其他耐用品及土地），还有金融资产（如现金、储蓄、债券和股票）。所有有价值的东西都叫做资产，而所有欠他人的东西都称为负债。总资产和总负债的差额称为财富或净财富
+### B. 边际生产率决定投入的价格
+1. 收入分配理论或分配理论研究的是经济中收入的决定问题
+2. 财富分布的中位数值要远远小于其平均数值，反映了人们拥有的财富的极大不平等
+3. 收入分配理论是一般价格理论的特例
+4. 供给和需求知识理解竞争性市场经济中收入分配问题的第一步，我们将会看到，收入的关键在于不同生产要素的边际产出
+#### 要素需求的性质
+1. 要素需求与消费品需求的主要差别有二：（1）要素需求是派生需求；（2）要素需求是相互依赖的需求
+#### 要素需求是派生需求
+1. 普通消费者的需求和企业对投入品的需求之间有着本质的差别：消费者需要计算机游戏和比萨饼等最终产品，是因为这些消费品都能直接地提供快乐或效用。而像企业购买办公场地这类投入，却并不是因为它们能直接地提供满足；企业购买投入品是因为它能够通过使用这些要素而得到最终产品和相应收入
+2. 是消费者的需求最终决定了企业对办公场地的需求
+3. 企业的投入需求由消费者对其最终产品的需求间接地派生而来
+#### 要素需求相互依赖
+1. 某种要素的生产率，如劳动生产率，取决于能够与之相匹配的要素的数量
+2. 这意味着在一般情况下，我们不应该说某一种投入独自创造了多少产出。说哪种要素更重要就好比说生孩子是父亲重要还是母亲重要一样
+3. 正是由于土地、劳动和资本品在生产中是相互依赖的，才使得收入的分配成为一个非常复杂的问题
+4. 如何将每种投入单独的贡献从整体分离出来呢？为了群求答案，我们需要考察要素的边际生产率（它影响需求）和要素的供给之间的相互作用关系。者二者决定要素的市场价格和交易数量
+5. 一种投入品的边际产量是指：在其他投入品不变时，增加一单位某种投入品后所能带来的产品或产出的增加量
+#### 分配理论和边际收益产品
+1. 对各种要素产品的需求来自每种要素通过其边际产品所产生的收入
+#### 边际收益产品
+1. 边际收益产品（MRP）用来衡量每一单新增投入品所能增加的货币收入。经济学家将增加以单位投入所能增加的产出的货币价值叫做”边际收益产品“
+2. MRP = MR * MP
+3. 投入品A的边际收益产品是追加一单位投入A所能产生的货币收益
+4. 在完全竞争条件下，每一个工人对于企业的价值都等于最后一个工人编辑产品的价值；每一英亩土地的价值等于土地的边际产品乘以产出的价格；对于其他各种要素可以依此类推
+5. 在不完全竞争条件下，每个企业所面对的需求曲线是向下倾斜的。此时，从出售的每一单位新增产出上获得的边际收益低于价格，因为企业为卖出1单位新增产出必须能降低此前所有产品的价格。对于企业来说每单位编辑产品的价值 MR < P
+#### 追求利润最大化的厂商的要素需求
+1. 要达到利润最大化，企业应当增加投入，直到投入的边际效益产品与投入的边际成本或价格相等
+2. 最低成本法则：当每一美元投入的边际产品都相等时，产品就达到了最小。这对于完全竞争和不完全竞争条件下的产品市场上的厂商都同样适用
+```math
+\frac{MP_1}{MC_1} = \frac{MP_2}{MC_2} = ...
+```
+3. 由最小成本法则进而得到利润最大化意味着：
+```math
+\frac{MP_1}{MC_1} = \frac{MP_2}{MC_2} = ... = \frac{1}{MR}
+```
+4. 劳动的边际产品 * 产出价格（MR）= 劳动的价格 = 工资
+5. 土地的编辑产品 * 产出价格 = 土地的价格 = 地租
+#### 边际收益产品和要素需求
+1. 不同厂商需求曲线的加总是决定劳动和其他要素需求的最后一步
+2. 替代法则和对要素的派生需求对于完全竞争和不完全竞争的产品市场均适用
+#### 生产要素的供给
+1. 劳动供给是由许多经济因素和非经济因素所共同决定的，重要的决定因素有劳动的价格（即工资率）和人口特征，如年龄、性别、教育和家庭结构
+#### 供给和需求决定要素价格
+1. 在给定的要素价格下，追求利润最大化的厂商将按各种投入的边际收益产品选择投入组合
+2. 完全竞争市场中投入的均衡价格，即是供给量和需求量相等时的那个价格水平
+3. 外科医生和快餐工人收入悬殊的原因在于劳动质量的差别，而不是工作时间的问题
+4. 是财富的多少而不是回报率高低导致财富财产收入的差距如此之大
+#### 国民收入的分配
+1. 在完全竞争条件下。如果市场上工人工资已经超过工人的边际成本，土地所有者就不会再雇佣工人。因此，竞争会确保所有的工人获得的工资率与最后一个被雇佣的工人的边际产品相等
+#### 多种投入的边际生产理论
+1. 在竞争市场中，投入的需求是由要素的边际产品决定的
+2. 收入分配的总体理论与多重要素生产的商品的竞争性定价是相容的。这个简单有力的说明：在一个竞争市场经济中，收入分配如何与生产率相关联的
+#### 收入分配中是否也存在看不见的手
+1. 在最有效地提供种类不断丰富的产品和服务方面，市场能够发挥强大的作用，然而并不存在一只看不见的手来保证自由经济能够公平地分配收入和财产
+## 第13章 劳动市场
+### 工资决定的基本理论
+#### 一般工资水平
+1. 平均实际工资，它代表1小时工作所能得到的实际购买力，或是除以生活费费用的货币工资
+#### 边际生产率差异
+1. 对于一种生产要素的需求反映了那种投入的边际生产率
+#### 国际比较
+1. 资本、教育水平、技术水平进和国内竞争竞争等其他一些因素对供应曲线有巨大的影响
+2. 不同国家之间的工资差异是由劳动的供给和需求的作用而形成的
+3. 墨西哥的工资比美国要低。从根本上说，是因为在墨西哥，劳动的边际生产率低
+#### 供给的决定因素
+1. 劳动的供给指的是人们愿意在有收益的活动中工作的小时数。决定劳动供给的的三个主要因素是：每个劳工的工作时间、劳动力参与程度和移民状况
+2. 导致美国高工资的主要因素美国劳动力受过更好的教育，工作技能更加熟练，供每个劳工使用的资本更多，技术更加现代化
+3. 替代效应：因为每小时工作的工资比以前更多，这样每小时的闲暇就变得比以前更昂贵，于是你会受到一种激励，想用额外工作去代因为每小时工作的工资比以前更多，这样每小时的闲暇就变得比以前更昂贵，于是你会受到一种激励，想用额外工作去代你去替闲暇
+4. 收入效应：有了更多的收入，你就会想购买更多的商品和服务，此外你还想有更多的闲暇时间。你能够享有更长的假期或更早退休，而在以前你却不能做这些事
+5. 哪一种效应更大，是替代效应还是收入效应？没有唯一正确的答案，这取决于个人
+#### 实证发现
+1. 对于作为一个整体的人口而言，劳动供给对实际工资变化的反应似乎非常小
+#### 工资差异
+1. 为了解释产业之间和个人普遍存在的工资差异，我们必须考虑到工作之间的差别、人与人之间的差别以及劳工市场上的不完全竞争
+#### 工种之间的差别：补偿性工资差异
+1. 各种工种的吸引力不同，因此必须提高工资以诱导人们进入这些吸引力较小的工种
+2. 为补偿相对吸引力或货币因素的差别而产生的各种工种之间的工资差异，称为补偿性差异
+#### 劳工之间的差异：劳动质量
+1. 工资差异的一个关键因素，在于人们的劳动质量存在着巨大的差别
+2. 尽管劳动质量的很多是由非经济因素决定，但积累人力资本的决策还是可以用经济标准来加以衡量。
+3. 人力资本这一概念指的是，人们在其接受教育和培训过程中积累起来的有用的和有价值的技术和知识
+4. 在今天的服务经济中，公司门处理的更多是信息，而不是原始材料。在信息时代，大学教育中所获得的知识是获取高收入工作的先决条件
+5. ”机会只偏爱有准备的头脑。“在一个技术日新月异的世界中，教育能教人理解新的环境并从中获利
+#### 人们的差异：独特个人的”租金“
+1. 这些天才人士都拥有一种在当今经济中很有价值的技能。在其拥有特殊才能的领域之外，他们只能整到其收入的一部分
+2. 经济学家将工资高于他们在次优职业中取得的收入的部分称为纯经济租金；这些收入在逻辑中上等于固定数量的土地获得的租金
+#### 分割的市场和非竞争性群体
+1. 我们仍会发现在工资之间还存在巨大差距，其主要原因是劳动市场被分割，形成了一些非竞争性群体
+2. 当人们专门从事某一特定职业时，他们就成为一个特定劳工亚市场的一部分
+3. 竞争性工资的决定因素
+
+| 劳动条件 | 工资结果 |
+| --- | --- |
+| 人员相同--工作同质| 没有工资差异 |
+| 人员相同--工作的吸引力有别 | 补偿性工资差异 |
+| 人员不相同，但每种劳动的供给不变（非竞争性群体） | 反映分割的市场上供求的工资差异 |
+| 人员不相同，但各竞争群体之间有若干流动性 | 一般供求决定的工资差异的一般均衡范式 |
+### B. 劳工市场的问题与政策
+1. 不完全竞争的原因之一就是工会，它代表了很大一部分劳工，尽管该比重正在下降。劳工市场的一大问题就是劳工歧视，虽然现在已经比几十年前有了改善，但其仍然是一个值得关注的重要问题。作用域劳工市场的另一个问题就是政府政策，通过设定最低工资、或鼓励或限制工会、宣布歧视非法等举措，政府可以对劳工市场施加有力的影响
+#### 美国工会的历史和时间
+1. 工会成员的工资和福利是由集体协议决定的。集体协议是劳资双方的代表为达成双方都能接受的雇用条件而进行交涉和商谈的过程
+#### 工会如何提高工资
+1. 工会通过获得对某一企业或产业劳动供给的合法垄断，从而拥有了市场力量
+2. 当工会将工资标准定得很高时，它并没有直接减少劳动供给（它不同于总需求不足所导致的失业）
+#### 工会化提高了工资吗
+1. 考虑了工人本身差距的情况下，经济学家得出如下结论：工会工人的工资比非工会工人的工资平均高出10%-15&
+2. 在剔除了经济周期对劳动所占份额的影响后，我们看到工会华对于美国工资占国民收入的份额没有什么显著的影响
+#### 工会与古典失业
+1. 工会化产业的工资相对于非工会化产业的工资会上升：同时工会化产业的就业会下降，非工会化产业的就业会上升
+2. 古典失业是由于实际工资高于竞争水平而造成的
+3. 经济学家经常将古典失业与经济周期中出现的失业（常称为”凯恩斯失业“）进行对比。凯恩斯失业来自于总需求不足
+4. 陷入实际工资过高状态的时候，一个国家或地区就会出现高失业率。这种失业对旨在增加总收入的传统宏观经济政策不会做出反应，因而需要通过降低实际工资来解决问题
+#### 歧视的定义
+1. 当收入差距的产生仅仅是由于不相关的个人特征，如种族、性别、性倾向或宗教等原因时，我们称之为歧视。通常，歧视可以有两种含义：（a）对不同的人一局个人特征而基于不同的待遇；（b）对某一特定群体设置不利的规则（如考试）
+#### 统计性歧视
+1. 统计性歧视，即个体的情况都被按其所属群体的平均情况而非个人特征加以处理
+2. 传统上妇女被排除在工程师等数学能力要求高的职业之外。结果，妇女在报考学校和择业时容易倾向于人文社会科学，这个结果反过来又会强化人们认为妇女对工程不感兴趣的成见
+3. 统计性歧视不仅能将个人的群体特征类型化，而且还能减弱个人对教育和培训进行投资的激励，从而反过来又强化关于原有群体特征的成见
+#### 减少劳工市场歧视
+1. 平权措施。它要求雇主证明：他正采取特别措施以安置和雇用那些少数群体
+2. 然而，确保承诺行动近年来已经被广泛地批评为一种”反向歧视“，一些州已经禁止它在就业和教育中加以使用
+## 第14章 土地、自然资源和环境
 
 
 
