--- a/微观经济学/微观经济学.md
+++ b/微观经济学/微观经济学.md
@@ -822,6 +822,54 @@ AC = \frac{TC}{q}
 1. 平权措施。它要求雇主证明：他正采取特别措施以安置和雇用那些少数群体
 2. 然而，确保承诺行动近年来已经被广泛地批评为一种”反向歧视“，一些州已经禁止它在就业和教育中加以使用
 ## 第14章 土地、自然资源和环境
+1. 本章将继续分析生产要素、讨论市场机制在土地、自然资源和环境等方面如何发挥作用
+### A. 自然资源经济学
+1. 在本章我们将简要地介绍对稀缺的自然资源进行定价和对环境进行管理的若干观点
+#### 资源种类
+1. 什么是重要的自然资源？它们包括土地、水和大气
+2. 在分析自然资源时，经济学家常从两个角度区分它们。其中最重要的区分是资源是可分拨的还是不可分拨的。
+3. 当厂商或消费者能够获得商品的全部经济价值时，商品被称为可分拨资源。可分的自然拨资源包括土地、矿产资源，以及森林
+4. 不可分拨资源是其成本或收益不能完全归属其拥有者的资源，换句话说，不可分拨的资源是一种具有外部性的资源
+5. 当市场参与者不能完全获得使用自然资源的成本或收益时，外部性就会发生，市场就会提供错误的信号和扭曲的价格。一般来说，对于外部不经济的产品，市场会生产过度；而对于外部经济的产品，市场又会产生不足
+6. 运用资源的方式，取决于资源本身是可再生的还是不可再生的
+7. 不可再生资源是指哪些供给量基本固定的资源
+8. 可再生资源，它们的效用能够被有规律地补充，而且只要管理得当，它们就能产生无穷无尽的效用
+#### 固定的土地和租金
+1. 土地的一个不寻常的特征是：数量固定，对价格完全缺乏弹性（这句话是由局限的。因为有时可以排掉湿地中的水使之成为土地，也可以对浅海湾进行填土而”生产“土地。从1630年到1900年，波士顿的土地面积增加了两倍。而且，土地可被用于不同的目的，在世界上许多农业用地已经转变为城市用地了）
+#### 作为固定要素收入的租金
+1. 固定要素的价格称为资金，或纯经济租金。经济学家所说的”租金“，不仅是就土地要素而言，而且还用它来讨论所有供给固定的要素
+2. 一定要记住”租金“一词在经济学中特殊而具体的含义，即租金是对使用供给固定的要素的支付。日常生活中的”租金“通常包括其他的意思，如对租用公寓或建筑所支付的费用
+3. 租金（或纯经济租金）是对使用供给固定的生产要素所支付的报酬
+4. 对要素的需求是由对要素所生产的产品的需求所派生出来的
+5. 因为土地的攻击没有弹性，且土地总是为了它能生产的产品而发挥作用，所以土地的价值完全是由其能够生产的产品的价值派生而来，反之则不成立
+#### 对土地征税
+1. 对纯经济租金征税不会导致扭曲或无效率
+2. 拉姆塞税收：如果一种商品的供给或需求高度缺乏弹性，对该部门征收税将不会对于生产和消费产生什么影响，所导致的扭曲将会非常小
+### B. 环境经济学
+1. 在这一节中，我们将揭示环境的外部性特征，说明为什么它们会造成经济的无效率，并分析可能的解决方式
+#### 外部性
+1. 外部性这个概念，其含义是一种向他人施加不被感知的成本或收益的行为，或者说是一种其影响无法完全体现在它的市场价格上的行为
+#### 外部性引起的市场无效率
+1. 亚伯拉罕林肯曾说过，政府应当”为人们做那些他们想做，但仅凭个人力量又根本无法做到或做好的事情“
+#### 对无效率的分析
+1. 符合社会效率标准的污染：达到社会效率标准需要控污的社会边际收益等于控污的社会边际收入
+2. 在许多场合，我们发现当一种行为的边际成本等于边际收益的时候，该行为的结果是最有效率的
+3. 成本--收益分析说明了为什么”无风险“或”零排放“政策通常是很浪费的
+4. 没有管制的市场经济会产生一定水平的浪费（或其他外部性），在这个水平上，控污的私人边际收益等于私人边际成本。效率要求控污的社会边际收益等于其社会边际成本。在一个没有管制的经济中，会产生过少的控污行为和过多的污染
+#### 矫正外部性问题的政策
+1. 对付由外部性造成的无效率的武器是什么呢？最常见的方法是政府的反污染计划，即通过直接控制或经济激励来引导厂商矫正外部性。更细致的办法是明确并加强产权管理，以促成私人部门之间通过协商达成更加有效的解决办法
+#### 政府计划
+1. 直接控制。几乎所有的污染和其他影响健康与安全的外部效应，政府均依靠直接的管制加以控制；这通常被称为社会管制。理论上管制者可以选择控污法令保证经济效率，但在现实中这一点却不大可能。事实上，许多污染管制苦于越来越多的政府失灵。例如，污染管制经常在对未对边际成本和边际收益进行比较之前就排版定夺了，而没有这种比较就根本无法确定有效率的控污成本。由于使用命令--控制法，实现环保目标产生了不必要的成本
+#### 市场办法：排放费
+1. 为避免直接控制存在的缺陷，许多经济学家建议环境政策应更多依靠市场机制。方法之一就是收取排放费；（使得外部效应内部化）大多数环境控制利用命令--控制的办法限制个体（如能源制造厂或汽车厂）排放污染物。更重要的是，它实际上使得所有的计划都会产生无效率，因为它不满足所有排放都有相同的边际成本这个条件
+#### 私人方式
+1. 明确清晰的产权可以取代政府管制或税收，从而解决外部性问题
+2. 私人部门克服外部性的一种方法是依靠责任规则，而不是直接的政府管制。在这种方法下，外部性问题的制造者有法律责任向受害者进行赔偿。事实上，建立一个恰当的责任系统，外部性就被内部化了
+3. 责任规则从理论上讲，是将生产非市场化的成本进行内部化的一个很好的方法，但是在现实中，责任规划的应用却十分有限。它通常需要高昂的诉讼成本，这增加了原有的外部性成本，而且，由于产权却不完全（例如，涉及清新的空气时），或者外部性牵涉到大量的企业（例如，将化学物质倒入溪流中），许多受害放很难或根本无法起诉
+4. 私人部门所采用的第二种方法依赖于明晰的产权和不同利益集团的谈判
+5. 只要产权清晰，交易成本很低，尤其是当只有很少的利益相关方时，健全的责任规则或谈判有时也能保证在存在外部性的情况下产生有效率的结果
+## 第15章 资本、利息和利润
+
 
 
 
