--- a/微观经济学/微观经济学.md
+++ b/微观经济学/微观经济学.md
@@ -869,7 +869,88 @@ AC = \frac{TC}{q}
 4. 私人部门所采用的第二种方法依赖于明晰的产权和不同利益集团的谈判
 5. 只要产权清晰，交易成本很低，尤其是当只有很少的利益相关方时，健全的责任规则或谈判有时也能保证在存在外部性的情况下产生有效率的结果
 ## 第15章 资本、利息和利润
-
+1. 你的蛋糕完全可以既保留下来又不影响食用：将它出借并收取利息即可 
+2. 本章主要研究资本。我们首先讨论资本理论的基本概念，包括”迂回性“概念和投资收益率的各种测算方法。然后我们将转向资本供求这个重要问题。这将会加深我们对自由市场经济的某些重要特征的了解
+### A. 利息和资本的基本概念
+#### 什么是资本
+1. 资本包括那些生产出来的资本品，它们在进一步的生产中被作为生产性投入
+2. 资本的基本特征是：它即使一种投入又是一种产出
+3. 在早期，资本主要包括有形资产。三种重要的有形资本是：建筑（如工厂和住宅）、设备（耐用消费品，如汽车；耐用生产设备，如机床和卡车）以及投入和产出的存货（如经销商的汽车存货）
+4. 现今，无形资本已经越来越重要。例如软件（如计算机操作系统）、专利（如微处理器）和品牌（如可口可乐）等。斯坦福大学的罗伯特霍尔称其为”e资本“，以区分传统的有形资本和越来越重要的知识资本
+#### 投资的价格和租费
+1. 大多数资本归使用它们的企业所有，但有些资本是由其所有者租借出去的。为暂时使用资本进行的支付叫做租费
+2. 我们要将固定要素（如土地）的租金收入与耐用品要素（如资本）的租费区别开来
+#### 资本和金融资产
+1. 个人和公司都拥有各种不同种类的资产。一种就是我们上面讨论的生产投入资本。还有金融资产。金融资产本质上就是一些纸张或电子记录。更准取地说，金融资产是一方对另一方的货币要求权
+2. 有形资产是经济的重要组成部分，因为它们可以提高其他要素的生产率。而金融资产的重要性产生于储蓄者和投资者之间的不匹配。学生需要钱来上大学，但他们现在没有收入或存款来支付这笔费用。而那些正在工作并为退休存钱的成年人，会有一些超过消费需求的收入可以提供给学生。金融体系机构众多，有银行、共同基金、保险公司和养老基金等，通常还有政府贷款和政府担保作为补充。通过它们可以把储蓄者的资金引向投资者
+#### 投资收益率
+1. 借款的成本或贷款的报酬称为投资收益率。在按固定利息计算金融资产的收益的情况下，这些收益称为利率。从经济学角度看，利率或投资收益是借款或贷款的价格
+2. 资本包括生产出来的耐用品，它们在其他产品的生产中被作为生产性投入。资本包括有形资产和无形资产
+3. 资本在资本市场上交易。为暂时使用资本品所做的支付叫做租费
+4. 我们必须能区分金融资产，它本质上就是一些纸张，其价值源于对其他有形或无形资产的所有权
+5. 投资收益率和特殊情况下的利率是借款和贷款的价格。我们通常以百分比/年为单位计算资金的收益率
+#### 资本的收益率
+1. 任何经济体最重要的任务之一，就是将其资本在各种可能的投资之间进行分配
+2. 为了做出最佳投资决策，我们需要一种衡量资本报酬的标注。一个重要的指标是投资收益率，即每1美元资本投入在1年中能够获取的净收益
+3. 投资收益率是每1美元投资的年净收益（租费收入减去费用）。它是一个纯粹的或无单位的数字--年百分比
+#### 资产的现值
+1. 大多数资产能在一定时期内产生一种租费流或收入流
+2. 假设你对拥有并管理一幢楼感到厌倦，并已经决定出售它。为了给楼确定一个合理的价格，你需要决定该楼的全部的未来收入流的现在价值。这些收入流的价值称为该项资本资产的现值
+3. 现值是未来收入流的现在的货币价值。它是这样计算的：在当前的利率下，计算出现在需要投资多少货币才能产生该项资产的未来的收入流
+#### 永久性资产的现值
+1. 永久性资产是一种像土地一样的资产，可以一直存在下去，每年支付N美元，直到永远。我们现在要找出现值V，如果年利率是i，那么现值就是每年收入恰为N美元的现在的投资的货币量。计算公式很简单：
+```math
+V = \frac{N}{i}
+```
+#### 折现的一般公式
+1. 我们现在转入更一般的情形。对于现值的一个要点是：未来的支付没有现在的支付值钱，所以相对现在来说它们应当被折现，就像从远处的目标看起来比近处的目标要小一样。从时间的角度来看，利率也造成了类似的收缩
+2. 在大多数情况下，资产的收入流量中包括好几项内容。在现值的计算中，每1美元都要按时间排好，首先，对未来收入流量的每一部分根据制度日期进行必要的贴现，计算出其现值，然后将各个现值加在一起，总额就是该项资产的现值
+3. 现值V的准确计算公式如下：
+```math
+V = \frac{N_1}{1 + i} + \frac{N_2}{(1 + i)^2} + ... + \frac{N_t}{(1 + i)^t} + ...
+```
+4. 永久性资产现值是折现一般公式的特殊情况
+收敛几何级数的代数公式：
+```math
+1 + K + K^2 + ... = \frac{1}{1 - K}
+```
+当 K = 1 / (1 + i) 时，可由折现一般公式得到永久性资产现值 V = N / i
+#### 使现值最大化
+1. 折现公式告诉我们，知道某项资产的未来收入之后，如何计算出该资产的现实价值。但是不要忘记，一项资产的未来收入通常取决于经营决策
+2. 有一条规则可以给所有的投资决策一个正确的答案：计算各种可能的决策所能带来的现值，然后依照使限制最大化的原则进行权衡。用这种方法，你将会有更多的财富，随便你以任何时间任何方式花费
+3. 当利率上升时，许多资产的价格就会下降
+4. 资产的价格与利率呈反向变动，因为资产的现值是随着利率的上升而下降的。而且，长期资产价格的变化大于短期资产价格的变化。这是因为，大多数收益都产生于未来，因此利率的变化对长期资产价格的影响更大
+5. 资产价格对利率的依赖性是金融资产的一般属性。股票、债券、不动产和许多其他长期资产的价格，都是随着利率的上升而下降的
+#### 利率的神秘世界
+1. 长期证券的利率通常要高于短期证券，因为只有当借款者能够增加兽医师才愿意放弃对其资金的快速存取
+2. 风险较大的证券的高利率体现的是由于可能存在违约损失而需要向借款者提供补偿的数额
+3. 如果一项资产在其价值只有很小减耗的情况下能够迅速转变为现金，则称该项资产具有流动性
+#### 实际利率和名义利率
+1. 名义利率是以1美元投资每年所得到的美元收入来衡量的。但是，美元有时会成为扭曲的标准。也就是说，以美元支付的利率不能衡量借款者实际以产品和服务形式获得的收益
+2. 实际利率用以衡量我们放弃现在的商品能得到的未来的商品数量。实际利率是由名义或货币利率对通过膨胀率进行修正后得到的
+3. 名义利率（有时也称为货币利率）是以货币形式衡量的货币的利率
+4. 实际利率则对通货膨胀进行了修正，其计算公式为：名义利率减去通货膨胀率
+### B. 资本、利润和利息理论
+#### 资本的基本理论
+#### 迂回性
+1. 通过牺牲现在消费并生产资本品，社会可以提高其未来的消费量
+#### 收益递减和对资本的需求
+1. 令人惊讶地是，在过去的两个世纪，尽管我们的资本存量增长了很多倍，但资本的收益率却没有大幅下降，它一直保持在较高的水平。这是因为，创新和技术变革创造新盈利机会的速度，与旧有投资抹杀新机会的速度同样快捷。尽管计算机比许多年前功能强大了成千上万倍，但它在社会的每个角落的新用途（从医疗诊断到电子商务）都使得继续对计算机投资仍然有利可图
+2. 当实际利率降到企业拥有的意愿存量与人们所愿提供的财富数量相当时，就达到了长期均衡。在长期均衡点上，净储蓄停止了，净资本积累为零，资本存量不再增加
+3. 当人们愿意持有的资产价值与企业生产所需的资本量恰好相等时，在这一实际利率上，资本存量就达到了长期均衡
+#### 利润作为资本的收益
+1. 除工资、利息和租金之外，经济学家经常提到的第四种收入称为利润
+#### 申报利润统计
+1. 会计将利润定义为总收入和总成本之间的差额
+2. 然而，在分析利润时，区分会计利润和经济利润很重要。会计利润（也称为营业收入）是会计在财务报表中计算的剩余收入。经济利润是减去所有成本之后的收入，包括货币成本和隐含机会成本。这些利润概念之所以不同，是因为会计利润忽略了一些隐含收益。企业所拥有的要素的机会成本称为隐含收益
+3. 经济利润一般小于营业利润
+#### 利润的决定因素
+1. 利润实际上是各种不同收益的组合，包括所有者的资本隐含收益、承担风险的汇报好创新利润
+2. 大多数所申报的企业利润，基本上是企业所有者所提供的资本和劳动等生产要素的报酬
+3. 在大公司里，大多数利润都是投入的资本的机会成本
+4. 利润也包括对承担投资风险的回报。所有这些风险必须要么通过购买保险来预防，要么在利润中获得风险溢价
+5. 公司利润是国民收入中一个最不稳定的组成部分。因此，获得公司利润的权利（由公司股票或股权来表示）就需要一个可观的风险溢价才能吸引规避风险的投资者。这一用以抵补投资风险的股权的额外回报，称为股权溢价
+6. 利润是一种剩余收入，等于总收入减去总成本。利润包括隐含收益（如所有者的资本的收益）、承担风险的回拜和创新利润
 
 
 
